# dd_bot

./: README.md  package.xml  setup.cfg  setup.py
config/: controllers.yaml  gz_bridge.yaml  main.rviz  mapper_params_online_async.yaml  twist_mux.yaml  view_bot.rviz
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dd_bot/share/dd_bot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dd_bot/share/dd_bot/config/: view_bot.rviz
install/dd_bot/share/dd_bot/launch/: rsp.launch.py  sim.launch.py
install/dd_bot/share/dd_bot/urdf/: inertial_macros.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
launch/: rsp.launch.py  sim.launch.py  teleop.launch.py
log/: latest_build
map/: obstacles_map.data
urdf/: camera.xacro  depth_camera.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
worlds/: cones.sdf  warehouse.sdf
