<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dd_bot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dev@todo.todo">dev</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>ros_gz_sim</depend>
  <depend>gz_ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>twist_stamper</depend>
  <depend>slam_toolbox</depend>
  <depend>controller_manager</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
